--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,19 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout código
+    - name: Checkout code
       uses: actions/checkout@v3
       
       
-    - name: Iniciar sesión en Docker Hub
+    - name: Sign in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
         
-    - name: Construir y subir imágenes Docker
+    - name: Build and upload Docker images
       run: |
-        services=("list-services" "songs-service" "video-service")
+        services=("cinemas-service" "list-service" "video-service")
         
         for service in "${services[@]}"
         do
@@ -34,12 +34,12 @@ jobs:
           fi
         done
 
-    - name: Corregir rutas en docker-compose.yml
+    - name: Fix routes in docker-compose.yml
       run: |
         sed -i 's|build: \./|build: ../|g' ./docker/docker-compose.yml
-        echo "Contenido actualizado de docker-compose.yml:"
+        echo "Updated content from docker-compose.yml:"
         cat ./docker/docker-compose.yml
 
-    - name: Ejecutar Docker Compose
+    - name: Execute Docker Compose
       run: |
         docker-compose -f ./docker/docker-compose.yml up -d
