--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       
+
       
     - name: Sign in to Docker Hub
       uses: docker/login-action@v2
@@ -21,7 +22,7 @@ jobs:
         
     - name: Build and upload Docker images
       run: |
-        services=("cinemas-service" "list-service" "video-service")
+        services=("list-services" "songs-service" "video-service")
         
         for service in "${services[@]}"
         do
@@ -29,7 +30,7 @@ jobs:
             docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest ./$service
             docker push ${{ secrets.DOCKERHUB_USERNAME }}/$service:latest
           else
-            echo "No se pudo encontrar el directorio para el servicio $service"
+            echo "Could not find directory for service $service"
             exit 1
           fi
         done
